--- a/index.html
+++ b/index.html
@@ -245,16 +245,16 @@
         <h2>Our Services</h2>
         <div class="service-cards">
             <div class="service-card">
-                <h3>Data Science & AI</h3>
-                <p>Unlock the potential of your data with our advanced analytics and artificial intelligence solutions, tailored to drive insights and innovation.</p>
+                <h3>Data & Insights</h3>
+                <p>Unlock the potential of your data with our expertise in analytics and artificial intelligence. We provide tailored solutions to transform data into actionable insights.</p>
             </div>
             <div class="service-card">
-                <h3>Software Development</h3>
-                <p>We offer comprehensive software development services, from concept to deployment, ensuring scalable and robust applications.</p>
+                <h3>Custom Solutions</h3>
+                <p>From conceptualization to deployment, we deliver software solutions designed to meet your unique business requirements, ensuring scalability and performance.</p>
             </div>
             <div class="service-card">
-                <h3>Digital Transformation</h3>
-                <p>Transform your business with our digital solutions, streamlining processes and integrating the latest technologies for a competitive edge.</p>
+                <h3>Digital Innovation</h3>
+                <p>Embrace the future with our digital transformation services. We help you integrate the latest technologies and streamline processes for a more agile and competitive business.</p>
             </div>
         </div>
     </section>
