--- a/index.html
+++ b/index.html
@@ -262,14 +262,14 @@
     <section id="contact" class="contact">
         <h2>Contact Us</h2>
         <div class="contact-info">
-            <p><strong>Address:</strong> 1234 Tech Avenue, Innovation City, World</p>
-            <p><strong>Email:</strong> info@cyberlhotse.com</p>
-            <p><strong>Phone:</strong> +123 456 7890</p>
+            <p><strong>Address:</strong> Kathmandu, Nepal</p>
+            <p><strong>Email:</strong> hello@cyberlhotse.com</p>
+            <p><strong>Phone:</strong> +977-9842466514</p>
         </div>
         <div class="social-media">
-            <a href="#"><img src="social-icons/facebook.png" alt="Facebook"></a>
-            <a href="#"><img src="social-icons/twitter.png" alt="Twitter"></a>
-            <a href="#"><img src="social-icons/linkedin.png" alt="LinkedIn"></a>
+            <a href="https://www.facebook.com/cyberlhotse"><img src="social-icons/facebook.png" alt="Facebook"></a>
+            <a href="https://x.com/cyberlhotse"><img src="social-icons/twitter.png" alt="Twitter"></a>
+            <a href="https://www.linkedin.com/company/cyberlhotse/about/"><img src="social-icons/linkedin.png" alt="LinkedIn"></a>
         </div>
     </section>
 
