--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div class="social-media">
             <a href="https://www.facebook.com/cyberlhotse"><img src="social-icons/facebook.png" alt="Facebook"></a>
             <a href="https://x.com/cyberlhotse"><img src="social-icons/twitter.png" alt="Twitter"></a>
-            <a href="https://www.linkedin.com/company/cyberlhotse/about/"><img src="social-icons/linkedin.png" alt="LinkedIn"></a>
+            <a href="https://www.linkedin.com/company/cyberlhotse/about/"><img src="docs/images/LN.png" alt="LinkedIn"></a>
         </div>
     </section>
 
