--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
             <p><strong>Phone:</strong> +977-9842466514</p>
         </div>
         <div class="social-media">
-            <a href="https://www.facebook.com/cyberlhotse"><img src="social-icons/facebook.png" alt="Facebook"></a>
-            <a href="https://x.com/cyberlhotse"><img src="social-icons/twitter.png" alt="Twitter"></a>
+            <a href="https://www.facebook.com/cyberlhotse"><img src="docs/images/FB.png" alt="Facebook"></a>
+            <a href="https://x.com/cyberlhotse"><img src="docs/images/X.png" alt="Twitter"></a>
             <a href="https://www.linkedin.com/company/cyberlhotse/about/"><img src="docs/images/LN.png" alt="LinkedIn"></a>
         </div>
     </section>
