--- a/index.html
+++ b/index.html
@@ -326,3 +326,50 @@
         <div class="hero-content">
             <h1>Innovating the Future</h1>
             <p>Empowering businesses through technology and digital transformation</p>
+```html
+            <a href="#services" class="btn">Our Services</a>
+        </div>
+    </section>
+
+    <section id="about" class="about">
+        <h2>About Us</h2>
+        <p>Cyber Lhotse is a technology-driven company that provides innovative solutions in various domains including digitization, software development, and artificial intelligence. Our mission is to enable organizations to leverage the power of technology for enhanced efficiency, growth, and transformation.</p>
+    </section>
+
+    <section id="services" class="services">
+        <h2>Our Services</h2>
+        <div class="service-cards">
+            <div class="service-card">
+                <h3>Data & Insights</h3>
+                <p>Unlock the potential of your data with our expertise in analytics and artificial intelligence. We provide tailored solutions to transform data into actionable insights.</p>
+            </div>
+            <div class="service-card">
+                <h3>Custom Solutions</h3>
+                <p>From conceptualization to deployment, we deliver software solutions designed to meet your unique business requirements, ensuring scalability and performance.</p>
+            </div>
+            <div class="service-card">
+                <h3>Digital Innovation</h3>
+                <p>Embrace the future with our digital transformation services. We help you integrate the latest technologies and streamline processes for a more agile and competitive business.</p>
+            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact">
+        <h2>Contact Us</h2>
+        <div class="contact-info">
+            <p><strong>Address:</strong> Kathmandu, Nepal</p>
+            <p><strong>Email:</strong> hello@cyberlhotse.com</p>
+            <p><strong>Phone:</strong> +977-9842466514</p>
+        </div>
+        <div class="social-media">
+            <a href="https://www.facebook.com/cyberlhotse"><img src="docs/images/FB.png" alt="Facebook"></a>
+            <a href="https://x.com/cyberlhotse"><img src="docs/images/X.png" alt="Twitter"></a>
+            <a href="https://www.linkedin.com/company/cyberlhotse/about/"><img src="docs/images/LN.png" alt="LinkedIn"></a>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2024 Cyber Lhotse. All rights reserved.</p>
+    </footer>
+</body>
+</html>
