--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
         <div class="hero-content">
             <h1>Innovating the Future</h1>
             <p>Empowering businesses through technology and digital transformation</p>
-```html
+/* HTML */
             <a href="#services" class="btn">Our Services</a>
         </div>
     </section>
